Btn fix on small screens

--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -21,15 +21,12 @@ body {
     }*/
 }
 
-#sticky-footer {
-  flex-shrink: none;
-}
-
 .btn
 {
     margin-top: 5px;
     margin-bottom: 5px;
-
+    white-space: normal;
+    word-break: break-word;
 }
 #dropdown-menu
 {
